<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable
            name="data"
            type="com.easyfoodvone.app_common.viewdata.DataPageDonateCancel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:background="@color/bg_white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/iv_banner"
                    android:contentDescription="@string/charity_banner_image_content_desc"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    tools:src="@drawable/banner_three"
                    android:src="@drawable/banner_two"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/tv_surity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    tools:text="@string/donate_are_you_sure_you_want_to_cancel"
                    android:layout_marginTop="24dp"
                    android:text="@string/donate_are_you_sure_you_want_to_cancel"
                    style="@style/Text_XLarge_Bold_Black"/>

                <TextView
                    android:id="@+id/tv_sucess_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:maxWidth="550dp"
                    android:gravity="center"
                    android:padding="16dp"
                    tools:text="@string/donate_cancel_dialog_msg"
                    android:text="@string/donate_cancel_dialog_msg"
                    style="@style/Text_Large_Regular_Grey"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:gravity="center">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:paddingStart="32dp"
                        android:paddingEnd="32dp"
                        android:text="@string/donate_cancel_button"
                        android:layout_gravity="center"
                        style="@style/Button_White_Bold"
                        android:onClick="@{() -> data.outputEvents.onClickCancel()}"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:paddingStart="32dp"
                        android:paddingEnd="32dp"
                        android:text="@string/donate_success_ok_button"
                        android:layout_gravity="center"
                        style="@style/Button_Orange_Bold"
                        android:layout_marginStart="42dp"
                        android:onClick="@{() -> data.outputEvents.onClickOk()}"/>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>